// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessageContent > AUDIO > should write an audio content correctly 1`] = `
"AudioChatMessageContentRequest(
    src="https://example.com/audio.mp3", metadata={"key": "value"}
)
"
`;

exports[`ChatMessageContent > FUNCTION_CALL > should write a function call content with id correctly 1`] = `
"FunctionCallChatMessageContentRequest(
    value=FunctionCallChatMessageContentValueRequest(
        id="123",
        name="get_weather",
        arguments={"location": "New York", "unit": "celsius"},
    )
)
"
`;

exports[`ChatMessageContent > FUNCTION_CALL > should write a function call content without id correctly 1`] = `
"FunctionCallChatMessageContentRequest(
    value=FunctionCallChatMessageContentValueRequest(
        name="get_weather", arguments={"location": "New York", "unit": "celsius"}
    )
)
"
`;

exports[`ChatMessageContent > STRING > should write a string content correctly 1`] = `"StringChatMessageContentRequest(value="Hello, AI!")"`;
